recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value lenght
    recule(lenght)
           ^Tree:7: error: not found: value lenght
 		avance(lenght)
                       ^