recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0){
    recule(lenght)
  }
  else{
    current(steps)
 		avance(lenght)
  	droite(angle)
  	tree(steps-1,shrink*length,angle,shrink)
  	gauche(2*angle)
  	tree(steps-1,shrink*length,angle,shrink)
  	recule(length)
  }
}